# LexGenie

./: Dockerfile  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/services/: agent.py  pdf_processor.py
app/templates/: standard_clauses.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: ChatbotPanel.jsx  MissingClauseHelper.jsx  RiskTextExpander.jsx
