[project]
name = "legal-document-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "groq>=0.37.1",
    "langchain>=1.3.6",
    "langchain-core>=1.4.3",
    "langchain-groq>=1.1.3",
    "pdfplumber>=0.11.9",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
]
